src/assets/css/layouts/sections/_hero.scss
@use 'sass:map';

.hero {
  max-width: 100%;
  width: 100%;
  display: block;
  position: relative;

  padding: map.get($header-height, 'xs') 0 91px 0;
  // min-height: 100vh;
  min-height: map.get($hero-height, 'xs');
  margin-top: -(map.get($header-height, 'xs'));
  @include grid-mn('md') {
    min-height: map.get($hero-height, 'md');
    padding: map.get($header-height, 'md') 0 113px 0;
    margin-top: -(map.get($header-height, 'md'));
  }
  @include grid-mn('xmd') {
    min-height: map.get($hero-height, 'xmd');
    padding: map.get($header-height, 'xmd') 0 113px 0;
  }
  @include grid-mn('xlg') {
    min-height: map.get($hero-height, 'xlg');
    padding: map.get($header-height, 'xlg') 0 139px 0;
    margin-top: -(map.get($header-height, 'xlg'));
  }
  @include grid-mn('xl') {
    min-height: map.get($hero-height, 'xl');
    padding: map.get($header-height, 'xl') 0 238px 0;
    margin-top: -(map.get($header-height, 'xl'));
  }

  .parallax-bg__wrap {
    // height: 700px;
    .parallax-bg img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: center;
      // max-height: 1200px;
    }
    // @include grid-mx('xsm') {
    // height: 600px;
    // }
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      // max-height: 800px;
    }
  }

  > .container {
    // padding-top: 40px;

    overflow: hidden;

    @include grid-mn('md') {
      padding-top: 64px;
    }
    @include grid-mn('xmd') {
      padding-top: 40px;
    }
    @include grid-mn('xlg') {
      padding-top: 160px;
    }
    @include grid-mn('xl') {
      padding-top: 240px;
    }
    @include grid-mn('xxl') {
      overflow: visible;
    }
    @include grid-mx('md') {
      padding: 21px 0px 0;
    }
  }

  // .hero__info

  &__info {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    @include grid-mn('xlg') {
      align-items: flex-start;
      width: 484px;
    }
    p {
    }

    > .btn-primary {
      margin: 28px 0 0;
      @include grid-mn('xlg') {
        margin: 40px 0 0;
      }
    }
  }

  // .hero__subtitle

  &__subtitle {
    color: var(--White-Smoke, #fafafa);
    font-family: Montserrat;
    text-align: center;
    font-style: normal;
    font-weight: 700;
    line-height: 140%; /* 33.6px */
    font-size: 20px;
    margin: 0;
    @include grid-mn('xsm') {
      font-size: 28px;
    }
    @include grid-mn('xmd') {
      text-align: left;
      font-size: 24px;
    }
  }

  // .hero__text

  &__text {
    color: var(--White-Smoke, #fafafa);
    font-family: Montserrat;
    text-align: center;
    font-style: normal;
    font-weight: 500;
    line-height: 140%;
    font-size: 20px;
    margin: 0 auto;
    max-width: 275px;
    @include grid-mn('md') {
      margin: 0;
      font-size: 28px;
      max-width: unset;
    }
    @include grid-mn('xmd') {
      text-align: left;
      font-size: 24px;
    }
  }

  // .hero__title

  &__title {
    margin: 20px 0 0;
  }

  // .hero__bg

  &__bg {
    width: 100%;
  }

  // .hero__content

  &__content {
    z-index: 1;
    position: relative;
    display: flex;
    justify-content: space-between;
    gap: 12px;
  }

  &__slider {
    position: relative;
    width: 100%;
    // @include grid-mn('md') {
    //   width: calc(100% - 175px);

    // }
    // @include grid-mn('xmd') {
    //   width: calc(100% - 191px);
    // }
    @include grid-mn('xlg') {
      padding: 8px 8px 0 8px;
      // width: 100%;
    }
    @include grid-mn('xxl') {
      max-width: calc(map.get($container-max-widths, 'xxl') - 484px - (map.get($container-bs-gutter, 'xxl') / 2) - 12px);
    }
    .swiper {
      overflow: visible;
    }
    &-content {
      display: flex;
      flex-direction: column-reverse;
      gap: 28px;
      max-width: 100%;
      &.container {
        @include grid-mx('md') {
          padding: 12px 14px 0;
        }
      }
      @include grid-mn('md') {
        // flex-direction: row-reverse;
      }
      @include grid-mn('xmd') {
        gap: 20px;
      }
      @include grid-mn('xlg') {
        flex-direction: column;
        position: absolute;
        top: 0;
        left: auto;
        right: 0;
        overflow: hidden;
        margin-top: map.get($header-height, 'xlg');
        padding-left: 0;
        width: calc(50% + 108px);
      }
      @include grid-mn('xxl') {
        max-width: unset;
        width: calc(50% + 320px);
      }
    }
    .swiper-slide {
      width: auto;
      height: auto;
    }
  }
  &__nav {
    position: relative;
    height: 64px;
    &-block {
      position: relative;
      height: 100%;
      display: flex;
      justify-content: flex-end;
      gap: 12px;
      .swiper-button-next,
      .swiper-button-prev {
        position: relative;
        left: unset;
        right: unset;
        top: unset;
        margin-top: 24px;
        &,
        > img {
          width: 40px;
          height: 40px;
        }
        > img {
          display: flex;
        }

        @include grid-mn('xmd') {
          margin-top: 28px;
          width: 32px;
          height: 32px;
        }
        &::after {
          content: none;
        }
      }
    }
    .swiper-scrollbar.swiper-scrollbar-horizontal {
      top: 12px;
      --swiper-scrollbar-bg-color: rgba(165, 167, 172, 0.5);
      --swiper-scrollbar-drag-bg-color: var(--White, #fff);
    }
  }
}
/* ... */

